# world_happiness_data_analysis

./: LICENSE  README.md  pyproject.toml
models/: world_happiness_model.pt
notebooks/: world_happiness.ipynb
world_happiness_data_analysis/: lib.py
