[tool.poetry]
name = "world-happiness-data-analysis"
version = "0.1.0"
description = ""
authors = ["secretarybird97 <81328194+secretarybird97@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
