[tool.poetry]
name = "world-happiness-data-analysis"
version = "0.1.0"
description = ""
authors = ["secretarybird97 <81328194+secretarybird97@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
seaborn = "^0.13.2"
scikit-learn = "^1.4.0"
jupyter = "^1.0.0"
ipykernel = "^6.29.2"
kaggle = "^1.6.6"
category-encoders = "^2.6.3"
torch = "^2.2.0"
torchvision = "^0.17.0"
torchaudio = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
